@@ -1,4 +1,4 @@
-numpy
+numpy == 1.18.0
 pytz
 python-dateutil
 ruamel.yaml
