@@ -76,3 +76,4 @@
  1-Aug-2020  - V0.75 Add https protocol StashUtil.fetchBundle()
 24-Aug-2020  - V0.76 Add module ProcessStatusUtil() and related tests.
 19-Oct-2020  - V0.77 Adjust troubleshooting logging
+26-Oct-2020  - V0.78 down version numpy to 1.18.0 to solve Py3.9 macos issue
